--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#0f172a" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Full-stack developer specializing in React, TypeScript, and Node.js. View my projects and get in touch." />
     <title>Samuel Tim | Full-Stack Developer Portfolio</title>
